# my_rag

./: .env  .gitattributes  .gitignore  Consumer.py  Question_extractor.py  README.md  pyproject.toml  백_inference.py  운동_inference.py
